# Android--

./: README.md
Incremental/: CMakeLists.txt  build.gradle  proguard-rules.pro
Incremental/src/androidTest/java/com/manager/incremental/: ExampleInstrumentedTest.java
Incremental/src/main/: AndroidManifest.xml
Incremental/src/main/cpp/incremental/: bspatch.c  com_manager_incremental_BsPatchNative.h
Incremental/src/main/cpp/incremental/bzip2/: bzip2.c  bzip2recover.c  dlltest.c  mk251.c  spewG.c  unzcrash.c
Incremental/src/main/java/com/manager/incremental/: BsPatchManager.kt  BsPatchNative.java  KotlinContextToolsExtionsion.kt
Incremental/src/main/res/values/: strings.xml
Incremental/src/test/java/com/manager/incremental/: ExampleUnitTest.java
